// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicSearchCell component DynamicSearchCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="gds-select-container input-select-field-read-only field input-select-field"
            >
              -
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DynamicSearchCell component DynamicSearchCell renders in edit mode and handles change 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="gds-select-container input-select-field field input-select-field"
            >
              <div
                class=" css-1959ul7-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-154lpzf-control"
                >
                  <div
                    class=" css-9plg90-ValueContainer"
                  >
                    <div
                      class=" css-qc6sy-singleValue"
                    >
                      Label 1
                    </div>
                    <div
                      class=" css-6j8wv5-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="react-select-2-listbox"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-owns="react-select-2-listbox"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="DATA-TEST-ID"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <div
                      aria-hidden="true"
                    >
                      <i
                        class="dynamic-search-icon icon"
                        data-testid="DATA-TEST-ID-clear"
                        icon="fal,xmark"
                      />
                    </div>
                    <span
                      class=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                    >
                      <i
                        class="dynamic-search-icon icon"
                        data-testid="DATA-TEST-ID-magnifier"
                        icon="fal,magnifying-glass"
                      />
                    </div>
                  </div>
                </div>
                <input
                  name="DynamicSearchCell"
                  type="hidden"
                  value="value1"
                />
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DynamicSearchCell component DynamicSearchCell renders in edit mode and handles change 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="gds-select-container input-select-field field input-select-field"
            >
              <div
                class=" css-1959ul7-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                >
                  <span
                    id="aria-selection"
                  >
                    All selected options have been cleared.
                  </span>
                  <span
                    id="aria-context"
                  >
                      Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
                  </span>
                </span>
                <div
                  class=" css-1tkmbhg-control"
                >
                  <div
                    class=" css-9plg90-ValueContainer"
                  >
                    <div
                      class=" css-14el2xx-placeholder"
                      id="react-select-2-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-6j8wv5-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="react-select-2-listbox"
                        aria-describedby="react-select-2-placeholder"
                        aria-expanded="true"
                        aria-haspopup="true"
                        aria-owns="react-select-2-listbox"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="DATA-TEST-ID"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                    >
                      <i
                        class="dynamic-search-icon icon"
                        data-testid="DATA-TEST-ID-magnifier"
                        icon="fal,magnifying-glass"
                      />
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class=" css-omztxt"
                  >
                    <div
                      class=" css-26l3qy-menu"
                      id="react-select-2-listbox"
                    >
                      <div
                        class=" css-4ljt47-MenuList"
                      >
                        <div
                          class=" css-gg45go-NoOptionsMessage"
                        >
                          No options
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <input
                  name="DynamicSearchCell"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DynamicSearchCell component DynamicSearchCell renders in edit mode via extra 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="gds-select-container input-select-field field input-select-field"
            >
              <div
                class=" css-1959ul7-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-3-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-154lpzf-control"
                >
                  <div
                    class=" css-9plg90-ValueContainer"
                  >
                    <div
                      class=" css-14el2xx-placeholder"
                      id="react-select-3-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-6j8wv5-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="react-select-3-listbox"
                        aria-describedby="react-select-3-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-owns="react-select-3-listbox"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-3-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                    >
                      <i
                        class="dynamic-search-icon icon"
                        icon="fal,magnifying-glass"
                      />
                    </div>
                  </div>
                </div>
                <input
                  name="DynamicSearchCell"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DynamicSearchCell component DynamicSearchCell renders when hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="gds-select-container input-select-field-read-only field input-select-field"
            >
              -
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DynamicSearchCell component DynamicSearchCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="gds-select-container input-select-field-read-only field input-select-field"
              data-testid="DATA-TEST-ID"
            >
              <span
                class="gds-typography"
              >
                Label 2
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
